# QuantumRetrocausal

./: .coveragerc  .env.example  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README_melhorias.md  REAL_TRADING_README.md  api_server.py  app.py  config.json  demo_quantum_enhanced.py  docker-compose.yml  estado_backup.json  exchange_config.json  execute_real.py  explore_consciousness.py  iniciar_sistema.py  integrated_trading_system.py  interface_trading.py  kucoin_balance_test.py  main.py  mypy.ini  pyproject.toml  pytest.ini  qcnn_wrapper.py  quantum_cnn.py  requirements.txt  run.py  run_real.bat  run_test.py  run_test_exchange_credentials.bat  run_test_exchanges.bat  server.py  server_quantum.py  set_env.ps1  set_kraken_env.ps1  (+8 more)
.streamlit/: config.toml
attached_assets/: README_CGR_TRADING.md  plano_integracao.md  plano_integracao_demo_quantum.md  plano_integracao_quantum_trading.md  plano_integracao_quantum_trading_atualizado.md
config/: scalping_config.json  wave_config.json  wave_config.json.bak_20250321_221448
core/: __init__.py
dados/: estado_trading_20250315_000237.json  estado_trading_20250315_014950.json  estado_trading_20250315_031345.json  estado_trading_20250315_032456.json  estado_trading_20250315_033226.json  estado_trading_20250316_031958.json  estado_trading_20250316_113415.json  estado_trading_20250316_113625.json  estado_trading_20250316_113652.json  estado_trading_20250316_113730.json  estado_trading_20250316_113836.json  estado_trading_20250316_114841.json  estado_trading_20250316_115038.json  estado_trading_20250316_115316.json  estado_trading_20250316_115447.json  estado_trading_20250316_115515.json  estado_trading_20250316_115550.json
dark_finance/: dark_finance.py  quantum_consciousness.py
docs/: QUANTUM_TRADER_DOCS.md  fisr_optimization_analysis.md  fisr_optimization_technical_report.md
prometheus/: prometheus.yml
qualia/: __init__.py  ai_insights.py  constants.py  execution_layer.py  market_data.py  ml_state_predictor.py  monte_carlo.py  quantum_layer.py  quantum_state_manager.py  quantum_trader.py  validation_layer.py
qualia_core/: README.md  __init__.py  adaptive_granularity.py  benchmark.py  bitwise_operators.py  config.py  constants.py  constants_root.py  dark_finance.py  decoherence.py  dependency_check.py  field.py  field_types.py  field_types.py.new  framework.py  hash_utils.py  latent_information_field.py  main.py  market_interface.py  memory.py  metrics_analyzer.py  morphic_field.py  neural_adapter.py  parameter_adjuster.py  portfolio_manager.py  predictor.py  prepare_qualia_system.py  qtypes_compat.py  qualia.py  qualia_adaptive_field.py  qualia_bitwise.py  qualia_core.py  qualia_operator.py  qualia_retrocausal_field.py  qualia_system.py  quantum.py  quantum_cosmological_integrator.py  quantum_native_config.py  quantum_observer.py  quantum_ops.py  (+9 more)
qualia_simulations/: __init__.py  benchmark_comparativo.py  benchmark_monero_mining.py  benchmark_quantum_automaton.py  correlation_test_meta_space_mining.py  cosmic_dance.py  cosmological_evolution.py  exemplo_simulacao.py  mining_simulation.py  qualia_config_production.py  quantum_cosmological_integrator.py  quantum_cosmological_simulator.py  run_quantum_cosmological_simulation.py  test_qualia_benchmark.py  test_quantum_cellular_automaton.py  testar_simulador.py
quantum_merge/: __init__.py  merge_simulator.py  merge_tests.py  mock_quantum_systems.py  quantum_merge_monitor.py
quantum_trading/: README_QUANTUM_FIELD.md  __init__.py  analyze.py  auto_trader.py  backtest.py  cli.py  config_optimizer.py  consciousness.py  constants.py  data_loader.py  exceptions.py  executar_trading_real.py  holographic_memory.py  monitor.py  (+30 more)
(+696 files in other folders)
